--- a/service-discovery/docker-compose.yml
+++ b/service-discovery/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - 8761:8761
     environment:
-      - SPRING_SECURITY_USER_NAME=admin
-      - SPRING_SECURITY_USER_PASSWORD=admin
+      - SPRING_SECURITY_USER_NAME=${USERNAME}
+      - SPRING_SECURITY_USER_PASSWORD=${PASSWORD}
       - EUREKA_INSTANCE_HOSTNAME=localhost
       - EUREKA_CLIENT_REGISTER_WITH_EUREKA=false
       - EUREKA_CLIENT_FETCH_REGISTRY=false
