--- a/config-server/docker-compose.yml
+++ b/config-server/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     ports:
       - 8888:8888
     environment:
-      - SPRING_SECURITY_USER_NAME=admin
-      - SPRING_SECURITY_USER_PASSWORD=admin
+      - SPRING_SECURITY_USER_NAME=${USERNAME}
+      - SPRING_SECURITY_USER_PASSWORD=${PASSWORD}
