--- a/config-server/.env-example
+++ b/config-server/.env-example
@@ -1,2 +1,5 @@
-USERNAME=admin
-PASSWORD=admin
+SPRING_SECURITY_USER_NAME=admin
+SPRING_SECURITY_USER_PASSWORD=admin
+GIT_REPO_URI=https://github.com/seanghai-cheu/config-repo
+GIT_REPO_USERNAME=""
+GIT_REPO_PASSWORD=""
